# Mini-3d-game-in-C-

./: CMakeLists.txt  README.md
shaders/: fragment.glsl
src/: main.cpp
